--- a/src/components/infoprojetos/styles/InfoProjeto.module.css
+++ b/src/components/infoprojetos/styles/InfoProjeto.module.css
@@ -117,7 +117,15 @@
     .contSecundario{top: 1%;}
 } 
 
+@media (max-width: 390px) and (max-height: 844px){
+
+    .texto p {font-size: 0.7em;}
+
+} 
+
 @media (max-width: 360px) and (max-height: 780px){
+
+    .imagemProjeto img {width: 50%;}
 
     .contSecundario h1{font-size: 0.8em;}
 
@@ -127,6 +135,8 @@
 } 
 
 @media (max-width: 320px) and (max-height: 568px){
+
+    .imagemProjeto img {width: 35%;}
 
     .contSecundario h1{font-size: 0.7em;}
 
@@ -148,7 +158,7 @@
     .imagemProjeto img {width: 80%;}
 } 
 
-@media (max-width: 846px) and (max-height: 412px){
+@media (max-width: 914px) and (max-height: 412px){
 
     .imagemProjeto {bottom: 6%;}
 
@@ -164,7 +174,8 @@
         grid-column-start: 1;
         grid-column-end: 3;
     }
-} 
+    
+}
 
 @media (max-width: 812px) and (max-height: 375px){
 
