--- a/src/components/infoprojetos/styles/RestApi.module.css
+++ b/src/components/infoprojetos/styles/RestApi.module.css
@@ -164,6 +164,13 @@
     .linkApi {font-size: 0.5em;}
 }
 
+@media (max-width: 428px) and (max-height: 926px){
+
+    .apresentacao p {
+        font-size: 0.7em;
+    }
+}
+
 @media (max-width: 414px) and (max-height: 736px){
 
     .conteinerDescricao {
@@ -177,6 +184,29 @@
     .apresentacao p {
         font-size: 0.6em;
     }
+}
+
+@media (max-width: 390px) and (max-height: 844px){
+    
+    .imagemRestapi img {width: 75%;}
+    .apresentacao {font-size: 0.8em;}
+
+    .linkApi {font-size: 0.5em;}
+
+} 
+
+@media (max-width: 360px) and (max-height: 880px){
+
+    .apresentacao {font-size: 0.8em;}
+
+    .linkApi {font-size: 0.5em;}
+
+} 
+
+@media (max-width: 360px) and (max-height: 780px){
+
+    .imagemRestapi img {width: 80%;}
+
 } 
 
 @media (max-width: 375px) and (max-height: 812px){
@@ -209,6 +239,7 @@
 }
 
 @media (max-width: 320px) and (max-height: 568px){
+    
     .conteinerDescricao h1{font-size: 0.8em;}
 
     .skilsTec div {font-size: 0.5em;}
