--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -104,6 +104,11 @@
     .Conteiner{width: 90%;}
 }
 
+@media (max-width: 320px) and (max-height: 568px){
+
+    .conteinerAtivo{height: 120vh;}
+}
+
 @media (max-width: 896px) and (max-height: 414px){
 
     .conteinerProjetos{
@@ -111,6 +116,13 @@
     }
 
     .nomeProjeto{letter-spacing: 5px;}
+}
+
+@media (max-width: 375px) and (max-height: 812px){
+
+    .conteinerProjetos{height: 82%;}
+
+    .conteinerAtivo {height: 110vh;}
 }
 
 @media (max-width: 375px) and (max-height: 667px){
